src/components/ui-kit/formelements/dropdown-guests/dropdown-guests.scss
@import '../../../../assets/scss/utils/vars.scss';
@import '../../../../assets/scss/utils/mixins.scss';

.dropdown-guests__caption {
  margin-bottom: $inputCapMarBottom;
}

//common input__style
.input__style {
  border: 1px solid $DarkShade25;
  border-radius: $inputBorderRadius;
  width: 100%;
  font-family: $secondFont;
}
//common input__style end

.dropdown-guests {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: rem(-3) rem(9) rem(0) rem(0);
}
.dropdown-guests__expand-button {
  position: relative;
  cursor: pointer;
  color: $DarkShade50;
  margin: rem(-3) rem(9) rem(0) rem(0);
}

//- item-quantity-dropdown styles
.dropdown-guests-block {
  height: rem(44);
  align-items: center;
  border: rem(1) solid $DarkShade25;
  border-radius: rem(4);
}

.dropdown-guests-block.menu-open {
  border-bottom-left-radius: rem(0);
  border-bottom-right-radius: rem(0);
  display: block;
}
.dropdown-guests-selection__text {
  font-family: $secondFont;
  font-size: rem(14);
  color: $DarkShade75;
  height: rem(45);
  padding: rem(9) rem(15) rem(0) rem(15);
}
.dropdown-guests-menu {
  border-bottom-left-radius: rem(4);
  border-bottom-right-radius: rem(4);
}
.hidden {
  visibility: hidden;
}
.dropdown-guests-item {
  font-family: $secondFont;
  font-weight: bold;
  font-size: rem(12);
  color: $DarkShade100;
  text-transform: uppercase;
  padding-top: rem(7);
}
.dropdown-guests-menu-option {
  display: flex;
  justify-content: space-between;
}
.dropdown-guests-menu-option {
  height: rem(37);
  padding: rem(0) rem(5) rem(0) rem(15);
}
.dropdown-guests-menu {
  box-shadow: none;
  border: rem(1) solid $DarkShade25;
  cursor: default;
  margin: rem(-3) rem(-1) rem(-1);
}
.dropdown-guests-item-controls button.button-decrement,
.dropdown-guests-item-controls button.button-increment {
  border-radius: 50%;
  height: rem(30);
  width: rem(30);
  margin-top: rem(6);
}
.dropdown-guests-item-controls .counter {
  position: relative;
  border: none;
  margin: rem(0) rem(13) rem(0) rem(13);
  top: rem(-3);
  font-family: $secondFont;
  font-size: rem(12);
  font-weight: bold;
}
.icon-increment::before {
  display: block;
  height: rem(0);
  top: rem(6);
  width: rem(13);
}
.dropdown-guests,
.icon-decrement,
.icon-increment,
.dropdown-guests-button_clean,
.dropdown-guests-button_apply {
  cursor: pointer;
}
.button-decrement,
.button-increment {
  background: #fff;
}
.icon-decrement::after,
.icon-increment::after {
  font-size: rem(18);
  font-style: normal;
  font-family: $secondFont;
}
.icon-decrement::after {
  display: block;
  content: '-';
}
.icon-increment::after {
  content: '+';
  color: $DarkShade50;
}

.button-increment {
  border: rem(1) solid $DarkShade50;
}
.dropdown-guests-item-controls button {
  padding: rem(0);
}
.button-decrement {
  color: $DarkShade25;
  border: rem(1) solid $DarkShade25;
}
.empty {
  color: $DarkShade25;
  border: rem(1) solid $DarkShade25;
}
//- item-quantity-dropdown styles end

//- buttons
.dropdown-guests-buttons {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: rem(19) rem(0) rem(11) rem(5);
}
// .dropdown-guests-button_clean {
//   display: flex;
//   justify-content: flex-start;
// }
// .dropdown-guests-button_apply {
//   display: flex; 
//   justify-content: flex-end;
// }
.dropdown-guests-button_clean,
.dropdown-guests-button_apply {
  font-family: $secondFont;
  font-size: rem(12);
  font-weight: bold;
  color: $purple;
  text-transform: uppercase;
  background: #fff;
}
//- buttons end

